# SPL_Ass3_Client

./: CMakeLists.txt  makefile
include/: connectionHandler.h  echoClient.h  readFromSocketThread.h
src/: connectionHandler.cpp  echoClient.cpp  readFromSocketThread.cpp
